# SilkModHub

./: CMakeLists.txt  README.md  build.sh  build_linux.sh  build_linux_app.sh  build_macos.sh  build_macos_app.sh  build_windows.bat  build_windows_app.bat
backend/: CMakeLists.txt
backend/include/: ConfigManager.h  GameDetector.h  ModManager.h  ThunderstoreClient.h
backend/src/: ConfigManager.cpp  GameDetector.cpp  ModManager.cpp  ThunderstoreClient.cpp  main.cpp
bindings/: CMakeLists.txt  bindings.cpp
data/: config.json
frontend/: main.py
frontend/core/: backend.py  config.py  theme.py
frontend/themes/: dark.qss  light.qss  silk.qss
frontend/ui/: main_window.py  mod_card.py  settings_window.py  widgets.py
scripts/: detect_game.py  install_dependencies.py
